# rusty-reel

./: .editorconfig  Cargo.toml  flake.nix
rusty-reel/src/: main.rs
src/: dearrow_api.rs  main.rs  wisdom.txt
test-pretty-log/: Cargo.toml
