[package]
name = "rusty-reel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6"
eyre = "0.6"
log = "0.4"
poise = "0.5"
serenity = "0.12.0"
thiserror = "1"
tokio = { version = "1", features = ["full"] }