[package]
name = "rusty-reel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6"
dotenv = "0.15"
eyre = "0.6"
once_cell = "1.19"
poise = "0.6"
rand = "0.8"
reqwest = { version = "0.11", features = ["json"] }
serde = "1.0"
serde_json = "1.0"
serenity = "0.12.0"
test-log = "0.2.14"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.6.1", features = ["serde"] }
